# llama-cpp-node-api

./: .gitignore  .gitmodules  .npmignore  CLAUDE.md  CMakeLists.txt  README.md  package-lock.json  package.json  smoke.js  smoke_chat_jinja.js  smoke_concurrent.js  smoke_event_loop.js
.github/workflows/: prebuild.yml
docs/: guide.md
js/: index.d.ts  index.js
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
scripts/: sync-versions.js
src/: addon.cpp  addon_state.h  chat_templates.cpp  embed_worker.cpp  embed_worker.h  generate_worker.cpp  generate_worker.h  inspect_worker.cpp  inspect_worker.h  llama_model.cpp  llama_model.h  load_worker.cpp  load_worker.h  quantize_worker.cpp  quantize_worker.h
